# libotr-dev

./: .gitignore  Makefile.am  configure.ac
src/: message.c  message.h  privkey.c  proto.c  proto.h  userstate.c  userstate.h
tests/: Makefile.am  run.sh  test_list
tests/unit/: Makefile.am  test_auth.c
